# BankPL

./: app_bankPL.py  app_pl.py  classic_functions.py  dynamic.py  editme.html  fixit.ipynb  gen_PL.py  hello.py  modular_pl.ipynb  programmatic_layout.ipynb  pyproject.toml  randomize.py  requirements.txt  statement_config.json
initial_testing/: main_chase.ipynb  main_citi.ipynb  main_wellsfargo.ipynb  reportlab_test.ipynb
