[project]
name = "a-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbimporter>=0.3.4",
    "notebook>=7.4.4",
    "ollama>=0.5.1",
    "reportlab>=4.4.2",
    "streamlit-pdf-viewer>=0.0.26",
    "streamlit>=1.46.1",
    "pillow>=11.3.0",
]
